[workspace]
members = [
    "contracts/reputation-contract",
    "contracts/creditline-contract",
    "contracts/parameters-contract",
    "contracts/merchant-registry-contract",
    "contracts/liquidity-pool-contract",
    "contracts/lp-contract"
]
resolver = "2"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
